--- a/1-carteEcommerce/index.html
+++ b/1-carteEcommerce/index.html
@@ -21,19 +21,69 @@
             </div>
         </div>
         <div class="titrePrix">
-            <h2 class="titrecarte">Adidas Originals</h2>
+            <h2 class="titreCarte">Adidas Originals</h2>             
             <p class="prix">$ 39</p>
         </div>
         <div class="tailles">
-            <p class="tailleTxt"></p>
+            <p class="taillesTxt">Sizes</p>
         </div>
         <div class="colors">
             <h2 class="sousTitreC">Colors</h2>
-            <div class="ronds"></div>
-            <div class="ronds"></div>
-            <div class="ronds"></div>
-            <div class="ronds"></div>
-            <div class="ronds"></div>
+            <div class="contRonds">
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+            </div>
+        </div>
+    </div>
+    <div class="cartes">
+        <div class="partImg img2">
+            <div class="filtreBleu">
+                <div class="btnReveal">Acheter</div>
+            </div>
+        </div>
+        <div class="titrePrix">
+            <h2 class="titreCarte">Adidas Originals</h2>             
+            <p class="prix">$ 39</p>
+        </div>
+        <div class="tailles">
+            <p class="taillesTxt">Sizes</p>
+        </div>
+        <div class="colors">
+            <h2 class="sousTitreC">Colors</h2>
+            <div class="contRonds">
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+            </div>
+        </div>
+    </div>
+    <div class="cartes">
+        <div class="partImg img3">
+            <div class="filtreBleu">
+                <div class="btnReveal">Acheter</div>
+            </div>
+        </div>
+        <div class="titrePrix">
+            <h2 class="titreCarte">Adidas Originals</h2>             
+            <p class="prix">$ 39</p>
+        </div>
+        <div class="tailles">
+            <p class="taillesTxt">Sizes</p>
+        </div>
+        <div class="colors">
+            <h2 class="sousTitreC">Colors</h2>
+            <div class="contRonds">
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+              <div class="ronds"></div>
+            </div>
         </div>
     </div>
   </body>
